--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,8 +1,6 @@
 <h1>User Profile</h1>
-<%= form_for :profile do |f| %>
-  <%= f.label :nickname %>:
-  <%= f.text_field :nickname %>
-
+<%= form_for :photo, :html => { :multipart => true } do |f| %>
+<%= f.file_field :raw_name %>
                           <br />
     <%= submit_tag('submit') %>
 <% end %>
