--- a/app/views/users/avatar.html.erb
+++ b/app/views/users/avatar.html.erb
@@ -1,12 +1,18 @@
 <% unless @photos.blank? %>
   <% @photos.each do |photo| %>
-  <%= image_tag photo.raw_name_url %>
+  <%= image_tag photo.image_url( :thumb ) %>
+  <a src="/users/editAvatar?id="  class="fancybox" >修改</a>
 <% end %>
 <% else %>
   还没有图片 赶快上传吧
 <% end %>
 
-<% form_tag '/users/avatar', :method => 'post', :multipart => 'true' do |f| %>
-  <%= f.file_field :photo %>
+<%= form_for @photo, :url => '/users/avatar', :html => { :multipart => 'true' } do |f| %>
+  <%= f.file_field :image%>
   <%= f.submit %>
 <% end %>
+<script type="text/javascript">
+$(document).ready(function() {
+  $(".fancybox").fancybox();
+});
+</script>
