--- a/app/views/users/avatar.html.erb
+++ b/app/views/users/avatar.html.erb
@@ -1,18 +1,31 @@
+<% content_for :head do %>
+<script type="text/javascript">
+$(document).ready(function() {
+  $(".fancybox").fancybox({
+    autoSize: false,
+    width: 450
+  });
+});
+</script>
+<% end %>
+
+<% if @avatar.present? %>
+  头像：<%= image_tag @avatar.image_url :avatar %>
+<% else %>
+  请选择一张做为你的头像
+<% end %>
+
 <% unless @photos.blank? %>
   <% @photos.each do |photo| %>
-  <%= image_tag photo.image_url( :thumb ) %>
-  <a src="/users/editAvatar?id="  class="fancybox" >修改</a>
-<% end %>
+    <%= image_tag photo.image_url :thumb %>
+    <%= image_tag photo.image_url :avatar %>
+    <%= link_to '修改', {:controller => 'users', :action => 'edit_avatar', :id => photo}, :class => 'fancybox fancybox.ajax' %>
+  <% end %>
 <% else %>
   还没有图片 赶快上传吧
 <% end %>
 
 <%= form_for @photo, :url => '/users/avatar', :html => { :multipart => 'true' } do |f| %>
-  <%= f.file_field :image%>
+  <%= f.file_field :image %>
   <%= f.submit %>
 <% end %>
-<script type="text/javascript">
-$(document).ready(function() {
-  $(".fancybox").fancybox();
-});
-</script>
