--- a/app/assets/stylesheets/jquery.fancybox.css.scss
+++ b/app/assets/stylesheets/jquery.fancybox.css.scss
@@ -1,14 +1,4 @@
-/*
- * This is a manifest file that'll automatically include all the stylesheets available in this directory
- * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
- * the top of the compiled file, but it's generally better to create a new file per style scope.
- *= require_self
- *= require base
- *= require jcrop
- *= require wines
-*/
-
-/*! fancyBox v2.0.4 fancyapps.com | fancyapps.com/fancybox/#license */
+/*fancybox*/
 .fancybox-tmp iframe, .fancybox-tmp object {
 	vertical-align: top;
 	padding: 0;
@@ -230,10 +220,9 @@
 	background: rgba(0, 0, 0, .8);
 }
 
-/*patrick style*/
 .popup_header {}
 .popup_header h1 {padding:10px;border-bottom:1px solid #ccc;background-color:#ddd;font-size:14px;}
-.popup_header .close {background:url(base/fancybox_sprite.png) no-repeat left top; width: 12px; height:12px;margin:10px 10px 0 0;float:right;}
+.popup_header .close {background:url(fancybox_sprite.png) no-repeat left top; width: 12px; height:12px;margin:10px 10px 0 0;float:right;}
 .popup_content {padding:10px;}
 .popup_content .wine_bid_box table {border-left:1px solid #ccc;border-top:1px solid #ccc; margin:auto;}
 .popup_content .wine_bid_box table th {text-align:right; width:100px;}
