--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -1,8 +1,14 @@
-@charset "UTF-8";
 body {font-family:Arial, Helvetica, sans-serif;font-size:12px;background-color:#f5f5f5;margin:0px;padding:0px;color:#666;line-height: 18px;}
 *{margin:0;padding:0;}
 .clear {clear:both;zoom:1;height:0px;}
-.clearfix:after {visibility: hidden;display: block;font-size: 0;content: " .";clear: both;height: 0;}
+.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+}
 .clearfix { display: inline-block; }
 html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
@@ -48,12 +54,10 @@ input.year {width:50px;}
 input.month {width:30px;}
 input.quantity {width:40px;}
 input.price {width:50px;}
-input.radio, input.checkbox{border:none;padding:0;margin:0;vertical-align: middle;}
+input.radio, input.checkbox{border:none;padding:0;margin:0;}
 input.wine_search {width:250px;}
 input.winemaker {width:200px;}
 textarea.popup_comment, textarea.comment {width:97%;height:100px;}
-.creat_new input.text, .creat_new textarea.comment{width:100%;}
-input.photo, textarea.photo {width:180px;}
 
 .float_l {float:left;}
 .float_r {float:right;}
@@ -65,7 +69,6 @@ a:hover {color:#cc6666;text-decoration:underline;}
 .red {color: red;}
 .last {margin-right:0;}
 .success_information {background-color:#ddebb4;border:1px solid #b5c488;padding:20px;text-align:center;}
-.f12 {font-size:12px;}
 .f14 {font-size:14px;}
 img {border:none;}
 .count_more {font-size:12px;}
@@ -78,7 +81,6 @@ img {border:none;}
 .mr30 {margin-right:30px;}
 .mr10 {margin-right:10px;}
 .mr50 {margin-right:50px;}
-.ml20 {margin-left:20px;}
 .mt5 {margin-top:5px;}
 .mt10 {margin-top:10px;}
 .mt20 {margin-top:20px;}
@@ -93,7 +95,7 @@ img {border:none;}
 .sp100 {width:100px;}
 .sp200 {width:200px;}
 
-/*star style*/
+
 .star_s0, .star_s1, .star_s2, .star_s3, .star_s4, .star_s5 {background:url(base/star.jpg) no-repeat;display:inline-block;width:65px;height:12px;margin-top:2px;}
 .star_b_s00, .star_b_s05, .star_b_s10, .star_b_s15, .star_b_s20, .star_b_s25, .star_b_s30, .star_b_s35, .star_b_s40, .star_b_s45, .star_b_s50 {background:url(base/star.jpg) no-repeat;display:inline-block;width:79px;height:14px;}
 .star_s5 {background-position: 0 0;}
@@ -116,28 +118,27 @@ img {border:none;}
 
 .star_rate {float:left;}
 .star_rate img {margin-right:1px;}
-
 /*button style*/
 
 a.button_red, a.button_red span, a.button_red:active, a.button_reda:active span, a.button_brown, a.button_brown span, a.button_brown:active, a.button_brown:active span {background:url(base/btn_red.gif) no-repeat;}
-a.button_red {background-position:left top;display:inline-block;padding-left:20px;color:#fff;text-decoration:none;font-size:14px;}
-a.button_red span {background-position:right top;display:inline-block;height:30px;line-height:30px;padding-right:20px;}
+a.button_red {background-position:left top;display:inline;padding-left:20px;color:#fff;text-decoration:none;font-size:14px;}
+a.button_red span {background-position:right top;float:left;display:block;height:30px;line-height:30px;padding-right:20px;}
 a.button_red:active {background-position:left -30px;}
 a.button_red:active span {background-position:right -30px;}
 
 a.button_gray, a.button_gray span, a.button_gray:active, a.button_gray:active span, a.button_gray_b, a.button_gray_b span, a.button_gray_b:active, a.button_gray_b:active span {background:url(base/btn_gray.gif) no-repeat;}
 
-a.button_gray {background-position:left top;display:inline-block;padding-left:10px;color:#333;text-decoration:none;}
-a.button_gray span {background-position:right top;display:inline-block;height:25px;line-height:25px;padding-right:10px;}
+a.button_gray {background-position:left top;display:inline;padding-left:10px;color:#333;text-decoration:none;}
+a.button_gray span {background-position:right top;display:block;float:left;height:25px;line-height:25px;padding-right:10px;}
 a.button_gray:active {background-position:left -25px;}
 a.button_gray:active span {background-position:right -25px;}
-a.button_gray_b {background-position:left -60px;display:inline-block;padding-left:15px;color:#333;font-size:14px;text-decoration:none; }
-a.button_gray_b span {background-position:right -60px;display:inline-block;height:30px;line-height:30px;padding-right:15px;}
+a.button_gray_b {background-position:left -60px;display:inline;padding-left:15px;color:#333;font-size:14px;text-decoration:none; }
+a.button_gray_b span {background-position:right -60px;display:block;float:left;height:30px;line-height:30px;padding-right:15px;}
 a.button_gray_b:active {background-position:left -90px;}
 a.button_gray_b:active span {background-position:right -90px;}
 
-a.button_brown {background-position:left -97px;display:inline-block;padding-left:10px;color:#fff;text-decoration:none;}
-a.button_brown span {background-position:right -97px;display:inline-block;height:25px;line-height:25px;padding-right:10px;}
+a.button_brown {background-position:left -97px;display:inline;padding-left:10px;color:#fff;text-decoration:none;}
+a.button_brown span {background-position:right -97px;display:block;float:left;height:25px;line-height:25px;padding-right:10px;}
 a.button_brown:active {background-position:left -122px;}
 a.button_brown:active span {background-position:right -122px;}
 
@@ -150,11 +151,10 @@ a.btn_mail {background-position:0 -49px;height:12px;width:16px;}
 a.btn_bid {background:url(base/btn.jpg) no-repeat;text-indent:-9999px;}
 a.btn_bid {display:block;background-position:0 0;width:50px;height:25px;}
 a.btn_bid:active {background-position:0 -25px;}
-
+ 
 .icon_userlevel {background:url(base/icon.gif) no-repeat;display:block;}
 .icon_userlevel {width:13px;height:12px;background-position: 0 -177px;}
 .icon_like {background:url(base/icon.gif) no-repeat 0 -176px;padding-left:20px;}
-.icon_add_album {background:url(base/icon.gif) no-repeat 0 -201px;padding: 0 0 2px 20px;}
 
 /*globel style*/
 #wrapper {background:url(base/wp_bg.gif) repeat-x left top;padding:20px 0 0 0;}
@@ -173,25 +173,21 @@ a.btn_bid:active {background-position:0 -25px;}
 #globel_search {float:right;}
 #globel_search input {border:2px solid #ac1010;border-right:none;float:left;height:21px;width:300px;border-radius: 3px 0 0 3px;}
 #globel_search a {float:left;display:block;background:url(base/btn.jpg) no-repeat left -60px;width:28px;height:29px;text-indent:-9999px;}
-#mainholder {width:1030px;margin:0px auto;margin-bottom: 20px;}
+#mainholder {width:990px;margin:0px auto;margin-bottom: 20px;}
 #mainholder_top {text-align:center;}
-#maincontent {min-height:400px;}
-.bg_shadow {background:url(base/bg_whole_shadow.jpg) repeat-y left top;}
-.bg_bigshadow {background:url(base/bg_bigshadow.jpg) no-repeat left top;padding:35px 55px;}
-.bg_shadow_bottom {background:url(base/bg_shadow_bottom.jpg) no-repeat left bottom;width:1030px;height:20px;}
-.bg_shadow_red {background:url(base/bg_whole_shadow_red.jpg) repeat-y left top;}
-.bg_bigshadow_red {background:url(base/bg_bigshadow_red.jpg) no-repeat left top;padding:15px 25px;}
-.bg_shadow_bottom_red {background:url(base/bg_shadow_bottom_red.jpg) no-repeat left bottom;width:1030px;height:20px;}
-/*.shadow_side {background:url(base/bg_shadow_side.jpg) no-repeat left top;width:23px;height:306px;position:absolute;left:-18px;top:25px;z-index:1000;}*/
-.common_main {background-color:#fff;}
-#leftcol {width:620px;float:left;}
-#rightcol {width:250px;float:left;}
-#leftcol .sort_space {padding-bottom:5px;border-bottom:1px solid #333;margin:0 0 20px 0;}
-#leftcol .sort_item {float:right;}
+#maincontent {margin:0 5px;min-height:300px;padding-bottom:30px;}
+.bg_shadow {background:url(base/bg_shadow.gif) repeat-y left top;position:relative;}
+.shadow_side {background:url(base/bg_shadow_side.jpg) no-repeat left top;width:23px;height:306px;position:absolute;left:-18px;top:25px;}
+.common_bg #maincontent {background-color:#fff;}
+.common_main {padding:20px 30px;}
+.common_main #leftcol {width:620px;float:left;}
+.common_main #rightcol {width:250px;float:left;}
+.common_main #leftcol .sort_space {padding-bottom:5px;border-bottom:1px solid #333;margin:0 0 20px 0;}
+.common_main #leftcol .sort_item {float:right;}
 .comment_list ul li {padding:0 0 10px 0;border-bottom:1px dotted #ccc;margin-bottom:10px;}
 .comment_list .user_img {width:50px;float:left;margin-right:20px;}
 .comment_list .comment_main {width:550px;float:left;}
-.comment_list .comment_main_profile {width:430px;float:left;}
+.comment_list .comment_main_profile {width:440px;float:left;}
 .comment_list .help_count {float:right;}
 .comment_list .name_time_score {margin:0 0 10px 0; overflow: hidden;}
 .comment_list .comment_content {}
@@ -211,11 +207,11 @@ ul.side_user_have li .have_info {float:left;width:190px;}
 ul.side_user_nave li p {border-bottom: 3px;;}
 ul.side_wine_news li {padding-bottom:5px;border-bottom: 1px dotted #ccc;margin-bottom:5px;}
 ul.side_wine_news li a {color:#666;}
-
-
+.column2 .col_left {width:600px;float:left;margin-right:70px;}
+.column2 .col_right {width:250px;float:left;}
 /*pagination style*/
 
-div.pagination {padding-right: 3px; padding-left: 3px; padding-bottom: 3px; margin: 3px; padding-top: 3px; text-align: center; clear:both;}
+div.pagination {padding-right: 3px; padding-left: 3px; padding-bottom: 3px; margin: 3px; padding-top: 3px; text-align: center}
 div.pagination a {border-right: #dedfde 1px solid; padding-right: 6px; background-position: 50% bottom; border-top: #dedfde 1px solid; padding-left: 6px; padding-bottom: 2px; border-left: #dedfde 1px solid; color: #99210b; margin-right: 3px; padding-top: 2px; border-bottom: #dedfde 1px solid; text-decoration: none}
 div.pagination a:hover {border-right: #000 1px solid; border-top: #000 1px solid; background-image: none; border-left: #000 1px solid; color: #fff; border-bottom: #000 1px solid; background-color: #777777}
 div.pagination a:active {border-right: #000 1px solid; border-top: #000 1px solid; background-image: none; border-left: #000 1px solid; color: #fff; border-bottom: #000 1px solid; background-color: #777777}
@@ -227,4 +223,3 @@ div.pagination span.disabled {padding-right: 6px; padding-left: 6px; padding-bot
 #footer {width:970px;margin:20px auto;padding:0 10px;}
 #footer a {color:#666;}
 #footer .copyright {float:right;font-size:11px;}
-
