--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -234,7 +234,7 @@
 /*patrick style*/
 .popup_header {}
 .popup_header h1 {padding:10px;border-bottom:1px solid #ccc;background-color:#ddd;font-size:14px;}
-.popup_header .close {background:url(base/fancybox_sprite.png) no-repeat left top; width: 12px; height:12px;margin:10px 10px 0 0;float:right;}
+.popup_header .close {background:url(fancybox_sprite.png) no-repeat left top; width: 12px; height:12px;margin:10px 10px 0 0;float:right;}
 .popup_content {padding:10px;}
 .popup_content .wine_bid_box table {border-left:1px solid #ccc;border-top:1px solid #ccc; margin:auto;}
 .popup_content .wine_bid_box table th {text-align:right; width:100px;}
@@ -250,3 +250,5 @@
 .comment_box th {text-align:right;}
 .comment_star label {float:left;margin-right:10px;vertical-align: middle;font-size:12px;}
 .comment_star label input {vertical-align:middle;margin-right:5px;}
+
+.creat_new table th, .creat_new table td {padding:5px; vertical-align:top;}
