--- a/app/assets/stylesheets/wines.css.scss
+++ b/app/assets/stylesheets/wines.css.scss
@@ -1,14 +1,14 @@
 /*wine*/
-.wineprofile_name {margin:0 10px 10px 10px;}
+.wineprofile_name {margin:0 35px 10px 35px;}
 .wineprofile_name h1 {font-size:22px;margin:0;color:#333;}
 .wineprofile_name h2 {font-size:14px;margin:0;}
-.wineprofile_main {padding:20px;}
+.wineprofile_main {}
 #wp_left {width:130px;float:left;margin-right:20px;}
-#wp_middle {width:510px;float:left;margin-right:30px;}
+#wp_middle {width:500px;float:left;margin-right:20px;}
 #wp_right {width:250px;float:left;}
 #wp_left .wine_img {margin-bottom:10px;}
 .wine_info {position:relative;border-bottom:1px dotted #ccc;padding:0 0 15px 0;}
-.score_price {text-align:right;position:absolute;left:333px;}
+.score_price {text-align:right;position:absolute;left:323px;}
 ul.wui_rating {margin-bottom:5px;float:left;}
 .wui_rating li {margin-right:5px;float:left;}
 .wui_rating li.last {margin-right:0;}
