[UPDATE] 1. 初始化10条酒的条目 2. 初始化其他数据（酒的类型，葡萄品种等等） 3. Wine Register 4. 组织I18N文件.
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Patrick</title>
   <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
+
   <%= csrf_meta_tags %>
-  <%= yield :head %>
 </head>
 <body>
     <div id="wrapper">
@@ -58,3 +57,8 @@
 
 </body>
 </html>
+
+  <%= javascript_include_tag "application" %>
+
+
+
