--- a/app/views/users/albums/new.html.erb
+++ b/app/views/users/albums/new.html.erb
@@ -1,24 +1,22 @@
-<div id="cu_user_menu" class="clearfix">
-  <span class="f14">《 <a href="community_albmu_list.html">返回相册首页</a></span>
+<div class="popup_header">
+  <a href="javascript:void(0);" onclick="$.fancybox.close(true);" class="close"></a>
+  <h1 class="title"><%= t :new_album %></h1>
 </div>
-<div class="title_btn clearfix">
-  <h2>上传照片</h2>
+<div class="popup_content">
+	<div class="creat_new">
+    <table width="90%" border="0" align="center" cellpadding="0" cellspacing="0">
+      <tr>
+        <th><%= t :album_name %></th>
+        <td><input class="text" name="" type="text" /></td>
+      </tr>
+      <tr>
+        <th><%= t :album_description %></th>
+        <td><textarea class="comment" name="" cols="" rows=""></textarea></td>
+      </tr>
+      <tr>
+        <td>&nbsp;</td>
+        <td><a href="" class="button_gray float_l mr5"><%= t :create_album %></a><a href="" class="button_gray float_l"><%= t :cancle %></a></td>
+      </tr>
+    </table>
+    </div>
 </div>
-<div id="leftcol" class="mr50">
-  <div class="photo_upload">
-    <p class="mb10">选择相册 
-      <select name="">
-        <option>吃货那点事儿</option>
-        <option>植物也欢乐</option>
-        <option>小朋友们</option>
-      </select> 
-      <a href="popup_add_album.html" class="fancybox fancybox.ajax icon_add_album ml20">新建相册</a>
-    </p>
-    <p class="mb10"><a href="community_photo_upload3.html" class="button_gray"><span>选择照片</span></a></p>
-    <p>提示：每次最多可以批量上传二十张照片，按着 “command” 键可以一次选择多张照片</p>
-  </div>
-</div>
-<div id="rightcol">
-  <p class="mb20">相册总容量1G</p>
-</div>
-<div class="clear"></div>
