add layout fragment
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/share/_layout_fragment.html.erb
+++ b/app/views/share/_layout_fragment.html.erb
@@ -1,14 +1,11 @@
-<% if controller_name == 'cellars'%>
-
-<div class="winery bg_shadow_red">
-	<div class="bg_bigshadow_red"></div>
-	<div id="maincontent">
-		
-	<% elsif  %>
-	
-	<div class="bg_shadow">
-		<div class="bg_bigshadow"></div>
-		<div><%= image_tag 'base/bg_white_t.gif' %></div>
-		<div id="maincontent" class="common_main">
-			
-<% end %>
+<div class="bg_shadow">
+  <div class="bg_bigshadow">
+	<div id="maincontent" class="<%= set_layout_class_name %>">
+		<% flash.each do |name, msg| %>
+		<%= content_tag(:div, raw(msg), :id => "flash_#{name}") %>
+		<% end %>
+		<%= yield %>
+    </div>
+  </div>
+  <div class="bg_shadow_bottom"></div>
+</div>
