Add Bid Update Wine Profile
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Patrick</title>
     <%= stylesheet_link_tag    "application" %>
-    <%= raw stylesheet_if_exists "#{params[:controller]}/#{params[:controller]}", "#{params[:controller]}/#{params[:action]}" %>
+    <%= raw stylesheet_if_exists "#{params[:controller]}", "#{params[:controller]}/#{params[:action]}" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= yield :head %>
