--- a/app/views/share/_layout_fragment.html.erb
+++ b/app/views/share/_layout_fragment.html.erb
@@ -1,11 +1,25 @@
-<div class="bg_shadow">
-  <div class="bg_bigshadow">
-	<div id="maincontent" class="<%= set_layout_class_name %>">
-		<% flash.each do |name, msg| %>
-		<%= content_tag(:div, raw(msg), :id => "flash_#{name}") %>
-		<% end %>
-		<%= yield %>
-    </div>
-  </div>
-  <div class="bg_shadow_bottom"></div>
+<% if controller_name == 'users/cellars' || controller_name == 'users/bid'%>
+<div class="winery bg_shadow_red">
+	<div class="bg_bigshadow_red">
+		<div id="maincontent" class="<%= set_layout_class_name %>">
+			<% flash.each do |name, msg| %>
+			<%= content_tag(:div, raw(msg), :id => "flash_#{name}") %>
+			<% end %>
+			<%= yield %>
+		</div>
+	</div>
+	<div class="bg_shadow_bottom_red"></div>
 </div>
+<% else %>
+<div class="bg_shadow">
+	<div class="bg_bigshadow">
+		<div id="maincontent" class="<%= set_layout_class_name %>">
+			<% flash.each do |name, msg| %>
+			<%= content_tag(:div, raw(msg), :id => "flash_#{name}") %>
+			<% end %>
+			<%= yield %>
+		</div>
+	</div>
+	<div class="bg_shadow_bottom"></div>
+</div>
+<% end %>
