--- a/app/views/users/albums/photo.html.erb
+++ b/app/views/users/albums/photo.html.erb
@@ -1,29 +1,16 @@
-<div id="cu_user_menu" class="clearfix">
-  <div class="pic"><a href="#"><img src="/assets/base/test/user_img50.jpg" alt="不良夏生" width="50" height="50" /></a></div>
-  <div class="info_menu">
-    <h1>不良夏生 <img src="/assets/base/icon_user_l1.gif" width="13" height="12" alt="评论等级" />
-      <div class="edit_signature"><span> 准备小宇宙爆发......（<a href="#">修改</a>）</span></div></h1>
-    <ul class="clearfix">
-      <li><a href="community_listen.html">收听</a></li>
-      <li><a href="community_myhp.html">主页</a></li>
-      <li><a href="cellar_mycellar.html">酒窖</a></li>
-      <li><a href="community_statuses.html">广播</a></li>
-      <li><a href="community_albmu_list.html">相册</a></li>
-      <li><a href="community_setting.html">设置</a></li>
-    </ul>
-  </div>
-  <div class="clear"></div>
-</div>
+<% if user_signed_in? %>
+<%= render 'cu_user_menu' %>
+<% end %>
 <div class="title_btn clearfix">
-  <h2>我的相册-吃货那点事儿 <span class="count_b">(共10张)</span></h2>
+  <h2><%= @user.username %>的相册-吃货那点事儿 <span class="count_b">(共<%= @album.photos_num %>张)</span></h2>
 </div>
 <div id="leftcol" class="mr50">
   <div class="photo_detail">
     <div class="pn clearfix">
       <a href="#" class="button_gray float_r"><span>下一张</span></a>
       <a href="" class="button_gray float_r mr5"><span>上一张</span></a>
-      <a href="community_photo_list.html" class="button_gray float_l"><span>返回该相册</span></a>
-      第1张/共13张
+      <a href="<%= url_for :action => 'show', :album_id => @album.id %>" class="button_gray float_l"><span>返回该相册</span></a>
+      第<%= @count + 1 %>张/共<%= @album.photos_num %>张
     </div>
     <div class="photo_detail_pic"><img src="/assets/base/test/photo_600.jpg" alt="三文鱼色拉" width="600" height="404" /></div>
     <h3>三文鱼色拉</h3>
