--- a/app/views/share/_layout_fragment.html.erb
+++ b/app/views/share/_layout_fragment.html.erb
@@ -1,10 +1,7 @@
-<% if controller_name == 'users/cellars' || controller_name == 'users/bid'%>
+<% if controller_name == 'users/cellars' || controller_name == 'users/bid' || controller_name == 'mine/bid' || controller_name == 'mine/cellars'%>
 <div class="winery bg_shadow_red">
 	<div class="bg_bigshadow_red">
 		<div id="maincontent" class="<%= set_layout_class_name %>">
-			<% flash.each do |name, msg| %>
-			<%= content_tag(:div, raw(msg), :id => "flash_#{name}") %>
-			<% end %>
 			<%= yield %>
 		</div>
 	</div>
@@ -14,9 +11,6 @@
 <div class="bg_shadow">
 	<div class="bg_bigshadow">
 		<div id="maincontent" class="<%= set_layout_class_name %>">
-			<% flash.each do |name, msg| %>
-			<%= content_tag(:div, raw(msg), :id => "flash_#{name}") %>
-			<% end %>
 			<%= yield %>
 		</div>
 	</div>
